src/assets/styles/style.scss
/* ... */
img {
    user-select: none;
}

body {
    font-family: $font;
    background: #151515;
    color: #fff;
}

.link,
.link:visited {
    color: $primary-color;

    &:hover {
        text-decoration: underline;
    }
}

main {
    margin-left: 300px;
}

@media screen and (max-width: 1275px) {
    main {
        margin-left: 0;
        margin-top: 75px;
    }
}

.logo {
    color: #fff;
    font-size: 2rem;
    font-weight: 900;
    letter-spacing: 3px;
    text-align: center;

    span {
        color: $primary-color;
    }
}

// Aside styles

aside {
    background: #000;
    overflow-y: auto;
    overflow-x: hidden;
    width: 300px;
    height: 100vh;
    position: fixed;
    left: 0;
    top: 0;
    border-right: 1px solid #333;
    padding: 150px 25px 15px 25px;
    z-index: 99;
    transition: 300ms ease;

    .aside-top {
        background: #000;
        box-shadow: 0 20px 15px #000;
        position: fixed;
        top: 0;
        left: 0;
        padding: 25px;
        transition: 300ms ease;
    }

    .search-results {
        background: #222;
        border: 1px solid #333;
        position: absolute;
        width: 100%;

        div {
            padding: 10px;
            border-bottom: 1px solid #eee;
        }
    }


    .search-results div:hover {
        background-color: #f0f0f0;
    }

    .dropdown {
        @include fcs(15px);
        margin: 25px 0;

        button {
            cursor: default;
            font-size: 1.3rem;
            font-weight: 900;
            color: #fff;
        }

        .dropdown-content {
            @include fcs(10px);

            a {
                color: #ddd;
                margin-left: 10px;
                transition: 150ms;

                &:hover {
                    color: #777;
                }
            }
        }
    }
}

input {
    width: 100%;
    padding: 10px;
    font-size: 1rem;
    border: 2px solid #888;
    border-radius: 10px;
    background: #000;
    color: #fff;
    margin-top: 15px;
    transition: 300ms;

    &:focus {
        border: 2px solid $primary-color;
        outline: none;
    }
}

.aside-open {
    left: 0;

    .aside-top {
        left: 0;

        .logo {
            visibility: hidden;
        }
    }
}

@media screen and (max-width: 1275px) {
    aside {
        left: -300px;
        border-right: none;
        z-index: 1;

        .aside-top {
            left: -300px;
        }
    }

}

// NavBar styles

nav {
    @include fc(15px);
    background: #000;
    padding: 15px 25px;
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 75px;
    z-index: 100;
    display: none;
    justify-content: start;
    align-items: center;
}

.hamburger {
    width: 40px;
    height: 20px;
    -webkit-transform: rotate(0deg);
    -moz-transform: rotate(0deg);
    -o-transform: rotate(0deg);
    transform: rotate(0deg);
    -webkit-transition: .5s ease-in-out;
    -moz-transition: .5s ease-in-out;
    -o-transition: .5s ease-in-out;
    transition: .5s ease-in-out;
    cursor: pointer;

    span {
        display: block;
        position: absolute;
        height: 2px;
        width: 100%;
        background: $primary-color;
        border-radius: 9px;
        opacity: 1;
        left: 0;
        -webkit-transform: rotate(0deg);
        -moz-transform: rotate(0deg);
        -o-transform: rotate(0deg);
        transform: rotate(0deg);
        -webkit-transition: .25s ease-in-out;
        -moz-transition: .25s ease-in-out;
        -o-transition: .25s ease-in-out;
        transition: .25s ease-in-out;
    }

    span:nth-child(1) {
        top: 0px;
    }

    span:nth-child(2),
    span:nth-child(3) {
        top: 10px;
    }

    span:nth-child(4) {
        top: 20px;
    }

    &.open span:nth-child(1) {
        top: 6px;
        width: 0%;
        left: 50%;
    }

    &.open span:nth-child(2) {
        -webkit-transform: rotate(45deg);
        -moz-transform: rotate(45deg);
        -o-transform: rotate(45deg);
        transform: rotate(45deg);
    }

    &.open span:nth-child(3) {
        -webkit-transform: rotate(-45deg);
        -moz-transform: rotate(-45deg);
        -o-transform: rotate(-45deg);
        transform: rotate(-45deg);
    }

    &.open span:nth-child(4) {
        top: 14px;
        width: 0%;
        left: 50%;
    }

}

@media screen and (max-width: 1275px) {
    nav {
        display: flex;
    }
}

// Hero styles

.hero {
    width: 100%;
    padding: 15px;
    text-align: center;

    h1 {
        font-size: 3rem;
        padding: 15px;
        margin-bottom: 15px;

        span {
            color: $primary-color;
        }
    }

    .carousel {
        background: #222;
        border-radius: 10px;
        width: 100%;
        border-radius: 10px;
        overflow: hidden;
        height: 60vh;
        z-index: 0;

        .control-dots .dot.selected {
            background: $primary-color;
        }

        .slide {
            position: relative;
            width: 100%;
            height: 60vh;
            background-position: center;
            background-size: cover;
            background-repeat: no-repeat;

            p {
                user-select: none;
                background: hsla(0, 0%, 0%, 0.8);
                width: 100%;
                font-size: 2rem;
                padding: 25px 25px 45px 25px;
                position: absolute;
                bottom: 0;
                left: 0;
            }

            &.s-1 {
                background-image: url('./../img/img1.jpg');
            }

            &.s-2 {
                background-image: url('./../img/img2.jpg');
            }

            &.s-3 {
                background-image: url('./../img/img3.jpg');
            }
        }

    }
}
/* ... */

